created basic structure

--- a/index.haml
+++ b/index.haml
@@ -14,3 +14,24 @@
     %link{href: "assets/stylesheets/screen.css", rel: 'stylesheet'}
 
   %body
+    /HEADER
+    %header.l-header 
+
+    /MAIN
+    %section
+      .l-main
+
+    /FOOTER
+    %footer.l-footer
+
+    /JQuery
+    %script{src:"http://code.jquery.com/jquery-2.0.3.min.js"}
+
+    /Bootstrap
+
+    /If you are using Bootstrap, uncomment the line below
+    %script{src:"js/bootstrap/bootstrap.min.js"}
+
+    /Main
+    %script{src:"js/script.js"}
+    
