--- a/sass/modules/_divider.scss
+++ b/sass/modules/_divider.scss
@@ -1,3 +1,12 @@
 /*------------------------------------------*\
     Dividers styles
 \*------------------------------------------*/
+
+hr {
+  display: block;
+  height: 1px;
+  margin: $general-margin 0;
+
+  border: none;
+  background-color: $color-hr;
+}
