--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,24 +1,42 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+/*------------------------------------------*\
+    styles css
 
+    Simple CSS Framwork
+
+    This framework is inspired by Adi Purdila's framework (Tuts+)
+\*------------------------------------------*/
+
+/*------- Compass -------*/
+@import "compass";
 @import "compass/reset";
 
-@import "base/base";
-@import "base/ie8";
-@import "base/normalize";
-
-@import "layout/footer";
-@import "layout/header";
-@import "layout/main";
-@import "layout/nav";
-
-@import "modules/btn";
-@import "modules/divider";
-@import "modules/tables";
-@import "modules/forms";
-@import "modules/misc";
-
+/*------- Utilities -------*/
 @import "utilities/settings";
 @import "utilities/utilities";
+
+/*------- Bootstrap -------*/
+@import "bootstrap/bootstrap";
+
+/*------- Base -------*/
+@import "base/normalize";
+@import "base/base";
+@import "base/ie8";
+
+/*------- Fonts -------*/
+// @import "fonts/font-name";
+
+/*------- Layout -------*/
+@import "layout/nav";
+@import "layout/header";
+@import "layout/main";
+@import "layout/footer";
+
+/*------- Modules -------*/
+@import "modules/btn";
+@import "modules/divider";
+@import "modules/forms";
+@import "modules/tables";
+@import "modules/misc";
+
+/*------- Theme -------*/
+@import "theme/theme";
