--- a/sass/utilities/_settings.scss
+++ b/sass/utilities/_settings.scss
@@ -1,3 +1,36 @@
 /*------------------------------------------*\
     Settings
 \*------------------------------------------*/
+
+/*------- Typography -------*/
+
+$base-font-size: 16px;
+$font-1: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-2: Georgia, serif;
+
+$baseline: $base-font-size * 1.5;
+
+/*------- Colors -------*/
+
+$color-link: #4183C4;
+$color-link-hover: #333;
+
+$color-text: #333;
+$color-light-text: #777;
+
+$color-hr: #EEE;
+
+$color-1: #4183C4;
+$color-2: #efefef;
+
+$color-validation-error: red;
+$color-validation-success: green;
+
+/*------- Positioning -------*/
+
+$margin-multiplier: 2;
+
+$general-margin: $baseline * $margin-multiplier;
+
+
+
