--- a/sass/utilities/_utilities.scss
+++ b/sass/utilities/_utilities.scss
@@ -1,3 +1,27 @@
 /*------------------------------------------*\
-    Utilities 
+    Utilities
 \*------------------------------------------*/
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.align-left {
+  @include float-left;
+}
+
+.align-right {
+  @include float-right;
+}
+
+.clearfix {
+  @include clearfix;
+}
