--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -4235,12 +4235,93 @@ blockquote cite:before {
 /*------------------------------------------*\
   Header styles
 \*------------------------------------------*/
+/* line 5, ../sass/layout/_header.scss */
+.l-header {
+  padding: 1.5rem 0;
+}
+/* line 8, ../sass/layout/_header.scss */
+.l-header .logo {
+  margin: 0;
+  font-size: 1.625rem;
+  line-height: 3em;
+}
+/* line 13, ../sass/layout/_header.scss */
+.l-header .logo a {
+  text-decoration: none;
+}
+
+/* line 19, ../sass/layout/_header.scss */
+.l-list-divided {
+  margin: 0;
+}
+/* line 22, ../sass/layout/_header.scss */
+.l-list-divided li {
+  padding-left: 1rem;
+  margin-left: 1rem;
+  float: left;
+}
+
+/* line 30, ../sass/layout/_header.scss */
+#contact-info {
+  margin: 0;
+}
+/* line 33, ../sass/layout/_header.scss */
+#contact-info small {
+  text-transform: uppercase;
+}
+/* line 36, ../sass/layout/_header.scss */
+#contact-info small:last-child {
+  font-weight: bold;
+}
+
+/* line 42, ../sass/layout/_header.scss */
+#main-banner {
+  padding: 3rem 0 0;
+}
+
 /*------------------------------------------*\
     Main styles
 \*------------------------------------------*/
+/* line 5, ../sass/layout/_main.scss */
+.l-list-unstyled, .l-list.inline {
+  margin: 0;
+  padding: 0;
+}
+
+/* line 10, ../sass/layout/_main.scss */
+.l-image-well {
+  height: 4.5rem;
+  width: 4.5rem;
+  margin-right: 1.5rem;
+  text-align: center;
+  float: left;
+}
+
+/* line 20, ../sass/layout/_main.scss */
+.l-callout {
+  padding: 3rem;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
+
 /*------------------------------------------*\
     Footer styles
 \*------------------------------------------*/
+/* line 8, ../sass/layout/_footer.scss */
+.l-list.inline li {
+  display: inline;
+}
+
+/* line 13, ../sass/layout/_footer.scss */
+.social-icon {
+  display: inline-block;
+  width: 3rem;
+  height: 3rem;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
 /*------- Modules -------*/
 /*------------------------------------------*\
     Button styles
