--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -2,4 +2,23 @@
     Main styles
 \*------------------------------------------*/
 
-.l-main {}
+.l-list-unstyled {
+  margin: 0;
+  padding: 0;
+}
+
+.l-image-well {
+  height: 4.5rem;
+  width: 4.5rem;
+  margin-right: 1.5rem;
+
+  text-align: center;
+
+  @include float-left;
+}
+
+.l-callout {
+  padding: 3rem;
+
+  @include border-radius(3px);
+}
