--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -24,7 +24,7 @@
 
 /*------- Fonts -------*/
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700");
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,700");
+@import url("http://fonts.googleapis.com/css?family=Dosis:400,700");
 @import "fonts/font-awesome";
 
 /*------- Layout -------*/
