--- a/sass/utilities/_settings.scss
+++ b/sass/utilities/_settings.scss
@@ -5,23 +5,26 @@
 /*------- Typography -------*/
 
 $base-font-size: 16px;
-$font-1: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-2: Georgia, serif;
+$font-1: "Open Sans", Helvetica, Arial, sans-serif;
+$font-2: "Dosis", Georgia, serif;
 
 $baseline: $base-font-size * 1.5;
 
 /*------- Colors -------*/
 
-$color-link: #4183C4;
-$color-link-hover: #333;
+$color-link: #F2604A;
+$color-link-hover: #191919;
 
-$color-text: #333;
-$color-light-text: #777;
+$color-text: #454A4E;
+$color-light-text: #8C9296;
+$color-dark-text: #191919;
 
 $color-hr: #EEE;
 
-$color-1: #4183C4;
-$color-2: #efefef;
+$color-1: #F8f8f8;
+
+$color-banner: #55ABC7;
+$color-callout: #2D3439;
 
 $color-validation-error: red;
 $color-validation-success: green;
