added theme and final styles

--- a/index.haml
+++ b/index.haml
@@ -108,13 +108,13 @@
 
     //CALL TO ACTION
     %section 
-      .container.t-margin.l-callout.clearfix
+      .container.t-margin.t-callout.clearfix
         .row
           .col-lg-8
             %h2 Buy niw or try it free. It's super easy to start
             %h3 No credit card required for free trial
           .col-lg-4.text-right
-            %button.btn{type:"button"} Buy Now
+            %button.btn.btn-primary{type:"button"} Buy Now
             %button.btn{type:"button"} Try it free
 
     %hr/ 
