--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -62,4 +62,128 @@ blockquote cite {
 
 /*------- Layout related -------*/
 
+.t-margin {
+  margin-bottom: $general-margin;
+}
+
+/*------- Header -------*/
+
+.t-beveled {
+  border-bottom: 4px solid #f4f4f4;
+
+  @include box-shadow(0 2px 5px rgba(0, 0, 0, .4));
+
+}
+
+.logo a {
+  color: $color-text;
+  font-family: $font-1;
+}
+
+/*------- Main banner -------*/
+
+.t-main-banner {
+  background-color: $color-banner;
+
+  @include box-shadow(0 -4px 0 0 rgba(0,0,0, .2)inset);
+
+  h1, h3, p {
+    color: #fff;
+
+    @include text-shadow(1px 1px 3px rgba(0, 0, 0, .3));
+  }
+
+  hr {
+    width: 75%;
+    background-color: rgba(255, 255, 255, .4);
+  }
+}
+
+/*------- Buttons -------*/
+
+.btn {
+  background-color: $color-1;
+
+  color: $color-text;
+
+  border-color: darken($color-1, 20%);
+
+  @include box-shadow(0 -2px 0 0 darken($color-1, 20%)inset);
+
+  &:hover {
+    background-color: darken($color-1, 5%);
+  }
+}
+
+.btn-primary {
+  background-color: $color-link;
+
+  color: #fff;
+
+  border-color: darken($color-link, 20%);
+
+  @include box-shadow(0 -2px 0 0 darken($color-link, 20%)inset);
+
+  &:hover {
+    background-color: darken($color-link, 5%);
+  }
+}
+
+.btn-secondary {
+  background-color: $color-2;
+
+  color: #fff;
+
+  border-color: darken($color-2, 20%);
+
+  @include box-shadow(0 -2px 0 0 darken($color-2, 20%)inset);
+
+  &:hover {
+    background-color: darken($color-2, 5%);
+  }
+}
+
+/*------- Lists -------*/
+
+.l-image-well {
+  background-color: $color-hr;
+
+  @include border-radius(3px);
+}
+
+.l-list-divided li {
+  border-left: 1px solid $color-hr;
+}
+
+/*------- Callout -------*/
+
+.t-callout {
+  background-color: $color-callout;
+
+  h2 {
+    margin-top: 0;
+
+    color: #fff;
+  }
+
+  h3 {
+    margin-top: 0;
+  }
+}
+
+/*------- Footer -------*/
+
+.social-icon {
+  background-color: $color-hr;
+
+  color: $color-light-text;
+
+  @include border-radius(3px);
+}
+
+
+
+
+
+
 
