--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -4260,21 +4260,25 @@ blockquote cite:before {
   margin-left: 1rem;
   float: left;
 }
+/* line 28, ../sass/layout/_header.scss */
+.l-list-divided li:first-child {
+  border-left: 0;
+}
 
-/* line 30, ../sass/layout/_header.scss */
+/* line 34, ../sass/layout/_header.scss */
 #contact-info {
   margin: 0;
 }
-/* line 33, ../sass/layout/_header.scss */
+/* line 37, ../sass/layout/_header.scss */
 #contact-info small {
   text-transform: uppercase;
 }
-/* line 36, ../sass/layout/_header.scss */
+/* line 40, ../sass/layout/_header.scss */
 #contact-info small:last-child {
   font-weight: bold;
 }
 
-/* line 42, ../sass/layout/_header.scss */
+/* line 46, ../sass/layout/_header.scss */
 #main-banner {
   padding: 3rem 0 0;
 }
@@ -4298,7 +4302,12 @@ blockquote cite:before {
 }
 
 /* line 20, ../sass/layout/_main.scss */
-.l-callout {
+.l-text-well {
+  margin-left: 6rem;
+}
+
+/* line 24, ../sass/layout/_main.scss */
+.t-callout {
   padding: 3rem;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
@@ -4320,6 +4329,10 @@ blockquote cite:before {
   height: 3rem;
   font-size: 1.5rem;
   text-align: center;
+}
+/* line 21, ../sass/layout/_footer.scss */
+.social-icon i.fa {
+  margin-top: .75rem;
 }
 
 /*------- Modules -------*/
@@ -4431,3 +4444,123 @@ blockquote cite {
 }
 
 /*------- Layout related -------*/
+/* line 65, ../sass/theme/_theme.scss */
+.t-margin {
+  margin-bottom: 48px;
+}
+
+/*------- Header -------*/
+/* line 71, ../sass/theme/_theme.scss */
+.t-beveled {
+  border-bottom: 4px solid #f4f4f4;
+  -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+/* line 78, ../sass/theme/_theme.scss */
+.logo a {
+  color: #454a4e;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+}
+
+/*------- Main banner -------*/
+/* line 85, ../sass/theme/_theme.scss */
+.t-main-banner {
+  background-color: #55abc7;
+  -moz-box-shadow: 0 -4px 0 0 rgba(0, 0, 0, 0.2) inset;
+  -webkit-box-shadow: 0 -4px 0 0 rgba(0, 0, 0, 0.2) inset;
+  box-shadow: 0 -4px 0 0 rgba(0, 0, 0, 0.2) inset;
+}
+/* line 90, ../sass/theme/_theme.scss */
+.t-main-banner h1, .t-main-banner h3, .t-main-banner p {
+  color: #fff;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+}
+/* line 96, ../sass/theme/_theme.scss */
+.t-main-banner hr {
+  width: 75%;
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+/*------- Buttons -------*/
+/* line 104, ../sass/theme/_theme.scss */
+.btn {
+  background-color: #f8f8f8;
+  color: #454a4e;
+  border-color: #c5c5c5;
+  -moz-box-shadow: 0 -2px 0 0 #c5c5c5 inset;
+  -webkit-box-shadow: 0 -2px 0 0 #c5c5c5 inset;
+  box-shadow: 0 -2px 0 0 #c5c5c5 inset;
+}
+/* line 113, ../sass/theme/_theme.scss */
+.btn:hover {
+  background-color: #ebebeb;
+}
+
+/* line 118, ../sass/theme/_theme.scss */
+.btn-primary {
+  background-color: #f2604a;
+  color: #fff;
+  border-color: #c8270e;
+  -moz-box-shadow: 0 -2px 0 0 #c8270e inset;
+  -webkit-box-shadow: 0 -2px 0 0 #c8270e inset;
+  box-shadow: 0 -2px 0 0 #c8270e inset;
+}
+/* line 127, ../sass/theme/_theme.scss */
+.btn-primary:hover {
+  background-color: #f04b32;
+}
+
+/* line 132, ../sass/theme/_theme.scss */
+.btn-secondary {
+  background-color: #43484b;
+  color: #fff;
+  border-color: #131415;
+  -moz-box-shadow: 0 -2px 0 0 #131415 inset;
+  -webkit-box-shadow: 0 -2px 0 0 #131415 inset;
+  box-shadow: 0 -2px 0 0 #131415 inset;
+}
+/* line 141, ../sass/theme/_theme.scss */
+.btn-secondary:hover {
+  background-color: #373b3e;
+}
+
+/*------- Lists -------*/
+/* line 148, ../sass/theme/_theme.scss */
+.l-image-well {
+  background-color: #eeeeee;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
+
+/* line 154, ../sass/theme/_theme.scss */
+.l-list-divided li {
+  border-left: 1px solid #eeeeee;
+}
+
+/*------- Callout -------*/
+/* line 160, ../sass/theme/_theme.scss */
+.t-callout {
+  background-color: #2d3439;
+}
+/* line 163, ../sass/theme/_theme.scss */
+.t-callout h2 {
+  margin-top: 0;
+  color: #fff;
+}
+/* line 169, ../sass/theme/_theme.scss */
+.t-callout h3 {
+  margin-top: 0;
+}
+
+/*------- Footer -------*/
+/* line 176, ../sass/theme/_theme.scss */
+.social-icon {
+  background-color: #eeeeee;
+  color: #8c9296;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
