--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -17,7 +17,11 @@
   @include float-left;
 }
 
-.l-callout {
+.l-text-well {
+  margin-left: 6rem;
+}
+
+.t-callout {
   padding: 3rem;
 
   @include border-radius(3px);
