--- a/sass/utilities/_settings.scss
+++ b/sass/utilities/_settings.scss
@@ -22,6 +22,7 @@ $color-dark-text: #191919;
 $color-hr: #EEE;
 
 $color-1: #F8f8f8;
+$color-2: #43484b;
 
 $color-banner: #55ABC7;
 $color-callout: #2D3439;
