added last changes in CSS

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,7 +15,7 @@ blockquote {
   font-style: italic;
 
   cite {
-    font-size: .75rem;
+    font-size: 1rem;
     font-style: normal;
 
     &:before {
